# bilistream

./: Cargo.toml  README.md  README.zh_CN.md  TW_channels.txt  YT_channels.txt  areas.json  channels.json  config.json.example  config.yaml.example  danmaku-cli  danmaku.sh  get_lol_id.py  install.sh  live-danmaku-cli  puuid.txt  stream_manager.sh  yt-dlp.conf
TW/: TW_channels.txt
YT/: YT_channels.txt
src/: config.rs  deps.rs  lib.rs  main.rs  push.rs  tray.rs  updater.rs  windows_deps.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/plugins/: bilibili.rs  danmaku.rs  danmaku_client.rs  ffmpeg.rs  holodex.rs  live.rs  mod.rs  twitch.rs  utils.rs  youtube.rs
src/webui/: api.rs  mod.rs  server.rs  state.rs
