[package]
name = "bilistream"
version = "0.2.1"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.34"
riven = "2.61.0"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["cookies", "json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "chrono"] }
