[package]
name = "bilistream"
version = "0.4.5"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size (also reduces memory usage)
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols from binary

[dependencies]
async-trait = "0.1.77"
chrono = "0.4.34"
riven = "2.61.0"
clap = { version = "4.5.1", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
openssl = { version = "0.10.64", features = ["vendored"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "chrono"] }
cookie_store = "0.16"
md-5 = "0.10"
serde_urlencoded = "0.7"
qrcode = "0.12.0"
textwrap = "0.16"
unicode-width = "0.1.11"
lazy_static = "1.4.0"
percent-encoding = "2.3.1"
# WebSocket and streaming dependencies for native danmaku client
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
byteorder = "1.5"
flate2 = "1.0"
anyhow = "1.0"
# Web UI dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2.0"
# Windows dependencies
zip = "0.6"
# System tray dependencies (platform-specific)
open = "5.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
ksni = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
trayicon = "0.1"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "consoleapi", "processenv", "fileapi", "winnt", "winbase"] }
