[package]
name = "bilistream-tauri"
version = "0.5.0"
edition = "2021"

[lib]
name = "bilistream_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
bilistream = { path = "..", features = ["tauri-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
